@@ -8,7 +8,7 @@ dependencies:
   - drupal:field
   - token:token
 
-# Information added by Drupal.org packaging script on 2020-12-05
-version: '8.x-1.15'
+# Information added by Drupal.org packaging script on 2020-12-15
+version: '8.x-1.15+4-dev'
 project: 'metatag'
-datestamp: 1607188982
+datestamp: 1608053687
